k8s/netpol-cnpg-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-ingress
  namespace: sotetel
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: pg
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
      ports:
        - protocol: TCP
          port: 8000
        - protocol: TCP
          port: 5432
    - from:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: pg
      ports:
        - protocol: TCP
          port: 5432
          endPort: 8000
